Conf-AmonNG
7/10/09 (sam)
- correction bug 1404 : problème de prise en compte du mtu si eth0 est en dhcp.

5/10/09 (sam)
- correction bug (cosmétique) 1450 : faute de frappe dans un intitulé de log pour le p2p.

23/09/09 (sam)
-squid.conf : modification des http_access lorsqu'on est en mode pas authentifié car la règle !Reserved entre en conflit avec la régle du dessus qui autorise les connexions à Reserved. (bug 1420)

7/09/09 (sam)
ajout de domaines microsoft à ne pas authentifier

2/09/09 (sam)
- squid.conf + dico : ajout d'une variable permettant de faire passer ou non le rvp par le proxy pere global lorsqu'il est défini (Bug 1366)
- spcl.options + dico : adresse dns agriates multi-valué (bug 1363)
25/06/09 (sam)
- améliorations du script de gestion de l'agregation de lien (effectuées par Gabriel Corgne de l'académie de Nantes)
 
10/06/09 (sam)
- active_rvp.sh : le service rvp n'est plus ajouté dans les services à démarrer au lancement de la machine (suppression du update-rc.d rvp default)
- amon-reconf.sh : si le service rvp est présent dans rc3.d, alors on le supprime des rc*.d (update-rc.d -f rvp remove)
	on supprime le lancement de freeradius s'il n'est pas utilisé

26/05/09
- suppression de SARG

15/05/09
- dansguardian1/2.conf logfile format = 3 (format squid pour SARG)

13/05/09
- ajout d'une question pour activer ou non SARG (actif par défaut)

12/05/09
- correction dansguardian0 dansguardian$z

23/04/09
- ajout conf SARG
- suppression des /etc/cron.*/sarg
- les fichiers de log dansguardian sont désormais permutés par semaine (au lieu de par jour)

06/04/09 (emmanuel)
- ré-activation des plugins ntlm/basic pour DansGuardian
- conditionnement du démarrage de NGINX sur sa variable creole : "activer_revprox"

06/02/09 (emmanuel)
- diagnose/15-AmonServices : ajout des tests d'expiration des certificats 
26/02/09 (sam)
- agregation.conf : correction d'une erreur dans la conf (correction effectuée par GC de Nantes)

20/02/09 (sam)